checkpoints-to-config: Cleanup

--- a/C++/MarbleMaze_VS2017/MarbleMaze_VS2017.vcxproj.filters
+++ b/C++/MarbleMaze_VS2017/MarbleMaze_VS2017.vcxproj.filters
@@ -184,6 +184,6 @@
     </Media>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\Shared\MyText.txt" />
+    <Text Include="..\Shared\MyCheckpoints.txt" />
   </ItemGroup>
 </Project>
