--- a/C++/MarbleMaze_VS2017/MarbleMaze_VS2017.vcxproj
+++ b/C++/MarbleMaze_VS2017/MarbleMaze_VS2017.vcxproj
@@ -334,7 +334,7 @@
     <SDKReference Include="Microsoft.UniversalCRT.Debug, Version=10.0.17763.0" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\Shared\MyText.txt" />
+    <Text Include="..\Shared\MyCheckpoints.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
